2018-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  support/regression/tests/assert.c,
	  support/valdiag/tests/static_assert.c:
	  Add pragma for C2X, fix pragma for C99.

2018-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Support for C2X static_assert variant.

2018-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/SDCCval.c:
	  Fix use of undefined behaviour (left shift by negative amount).
	* support/regression/tests/bug-2749.c:
	  Test for bug #2749.
	* src/SDCCglue.c:
	  Code cleanup.
	* src/SDCCglobl.h,
	  src/SDCCmem.c,
	  src/SDCCutil.c,
	  src/pic14/genarith.c,
	  src/pic16/genarith.c,
	  src/stm8/peep.c:
	  Code cleanup by relying on ISO C99 support.

2018-05-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2746.c:
	  Test for bug #2746.
	* src/stm8/peep.c:
	  Fix reads from unallocated memory.

2018-04-25 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdbool.h:
	  Change the type of true and false to _Bool (see also N 2229).
	* device/include/assert.h,
	  device/lib/__assert.c,
	  device/lib/incl.mk:
	  Fix bug #2745.

2018-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update documentation on long long support.
	* device/lib/wctomb.c,
	  support/regression/tests/wchar.c:
	  Fix wctomb() error handling wrt. invalid surrogate codepoints.
	* device/lib/wcrtomb.c,
	  support/regression/tests/wchar.c:
	  Fix wcrtomb() errno handling.
	* device/lib/mbrtowc.c,
	  device/lib/mbtowc.c:
	  Improve mbrtowc(), mbtowc() error handling.
	* device/lib/mbrtoc16.c:
	  Simplify mbrtoc16() by relying on mbrtowc() error handling.
	* device/lib/c16rtomb.c,
	  support/regression/tests/wchar.c:
	  Fix c16rtomb() error handling.

2018-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h,
	  support/regression/tests/constantRange.c:
	  Fix intmax_t, uintmax_t limit macros.
